# cloudformation-cli-typescriptv2-plugin

./: .editorconfig  .gitignore  .pylintrc  CHANGELOG.md  NOTICE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.changeset/: purple-peaches-sneeze.md
.github/workflows/: ci.yaml
example/: .npmrc  .rpdk-config  README.md  package-lock.json  package.json  resource-role.yaml  template.yml  test-test-test.json  tsconfig.json  tsup.config.ts
example/docs/: README.md  memo.md  tag.md
example/src/: handlers.ts
include/config/: tsconfig.json
python/rpdk/typescript/: __init__.py  codegen.py  package.json  parser.py  utils.py
python/rpdk/typescript/data/: tsconfig.json
python/rpdk/typescript/templates/: README.md  handlers.ts  package.json  tsup.config.ts
scripts/: start-verdaccio.mts  sync-versions.mts
scripts/verdaccio/: config.yaml
src/: errors.ts  event.ts  exceptions.ts  handlers.ts  index.ts  request.ts  resource.ts  response.ts  types.ts
src/cli/: index.ts  program.ts
src/cli/commands/: generate.ts
src/config/: tsup.ts
src/logging/: background.ts  base.ts  cloudwatch-stream.ts  index.ts  metrics.ts  pool.ts
src/utils/: camelcaseKeys.ts
